# paramopt

./: .coverage  .gitignore  LICENSE  README-ja.md  README.md  pyproject.toml  setup.py
examples/: function.py  opt_gpyopt.py  opt_sklearn.py  optimizer.py  utils.py
paramopt/: __init__.py  acquisition.py  animation.py  exploration.py  optimizer.py  parameter.py  plot.py  utils.py
paramopt/acquisitions/: __init__.py  base.py  ei.py  ucb.py
paramopt/extensions/: __init__.py  animation.py  autohp.py  hpadjust.py
paramopt/graphs/: __init__.py  base.py  distribution.py  settings.py  transition.py
paramopt/imples/: __init__.py  base.py  gpy.py  sklearn.py
paramopt/optimizers/: __init__.py  base.py  cache.py  exceptions.py  gpyopt.py  sklearn.py
paramopt/structures/: __init__.py  dataset.py  parameter.py
paramopt/utils/: __init__.py  animation.py  string.py
tests/: test_acquisition.py  test_bo_gpyopt.py  test_bo_sklearn.py  test_dataset.py  test_graph.py  test_imple.py  test_optimization.py  test_optimizer.py  test_parameter.py  test_space.py  utils.py
